<resources>
    <string name="web_client_id">278147507172-eea5ob9vp3kfnftc867f9hfpc5ajkamq.apps.googleusercontent.com</string>

    <string name="app_name">Limitless</string>
    <string name="sigin">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="ask_name">Enter your nickname</string>
    <string name="example_user">Nickname here</string>
    <string name="go">GO</string>
    <string name="logout">LOGOUT</string>
    <string name="play_button">PLAY</string>
    <string name="rankings_button">RANKINGS</string>
    <string name="options_button">OPTIONS</string>
    <string name="win_button">WIN</string>
    <string name="lose_button">LOSE</string>
    <string name="pause_button">PAUSE</string>
    <string name="resume_button">RESUME</string>
    <string name="menu_button">MENU</string>
    <string name="mymap_button">MY MAP</string>
    <string name="inf_button">INFINITY MODE</string>
    <string name="back">BACK ARROW</string>
    <string name="live_game">GAME</string>
    <string name="you_won">YOU WON</string>
    <string name="you_died">YOU DIED</string>
    <string name="won_heart">WON HEART</string>
    <string name="next_level">NEXT LEVEL</string>
    <string name="worlds_button">WORLDS</string>
    <string name="pause_heart">PAUSE HEART</string>
    <string name="inf_mode">INFINITE MODE</string>
    <string name="ranking_lines">-----------------------</string>
    <string name="info_version">VERSION</string>
    <string name="developers">DEVELOPERS</string>
    <string name="detail_developers1">Aaron Peruga</string>
    <string name="detail_developers2">Pau Bernabe</string>
    <string name="detail_developers3">Arnau Rovira</string>
    <string name="detail_developers4">Manuel Martinez</string>
    <string name="music_rights">MUSIC RIGHTS</string>
    <string name="volume">MUSIC VOLUME</string>
    <string name="detail_music_rights">Andreas Solano</string>
    <string name="text_mymap">- Learn step by step\n- Short stages</string>
    <string name="text_infinite">- Any number of bosses\n- Go until you die</string>
    <string name="text_versus">- Play against a friend\n- Who lasts longer wins</string>
    <string name="youDiedheart">BROKEN HEART</string>
    <string name="retry_level">RETRY</string>
    <string name="change_left">LEFT</string>
    <string name="change_right">RIGHT</string>
    <string name="change_up">UP</string>
    <string name="change_down">DOWN</string>
    <string name="world_one">WORLD ONE</string>
    <string name="world_one_title">WORLD 1 - INTRO</string>
    <string name="world_two_title">WORLD 2 - BATS</string>
    <string name="world_three_title">WORLD 3 - DEMONS</string>
    <string name="world_four_title">WORLD 4 - SKULLS</string>
    <string name="first_level">FIRST LEVEL</string>
    <string name="second_level">SECOND LEVEL</string>
    <string name="third_level">THIRD LEVEL</string>
    <string name="fail_auth">Authentication Failed</string>
    <string name="ok_auth">Authenticated</string>
    <string name="bad_user_name">Bad username</string>
    <string name="fail_create_user">User can\'t be create at this moment</string>
    <string name="loading_content">Loading</string>
    <string name="logout_success">Logout Successfully</string>
    <string name="user_created">User created</string>
    <string name="imp_create_user">Impossible create user</string>
    <string name="user_name_exist">User name already exist</string>
    <string name="fail_google_auth">Google sign in failed</string>
    <string name="survived_rank">Survived</string>
    <string name="no_records">No Records</string>
    <string name="player">Player</string>
    <string name="p1_wins">P1 WINS</string>
    <string name="p2_wins">P2 WINS</string>
    <string name="p1">P1.</string>
    <string name="p2">P2.</string>
    <string name="player1_dead">Player 1 Died</string>
    <string name="player1_lost">Player 1 Lost</string>
    <string name="next_player">Continue Player 2</string>
    <string name="end_tutorial">End Tutorial</string>
    <string name="tutorial">Tutorial</string>
    <string name="swipe_tutorial">Swipe to Continue</string>
    <string name="vibration">VIBRATION</string>
    <string name="easter_egg_menu">Esto no es un boton\nEres calvisimo</string>
    <string name="mustPassPractice">You must finish Practice Mode first</string>
    <string name="score">SCORE:</string>
    <string name="score1">SCORE P1:</string>
    <string name="score2">SCORE P2:</string>
    <string name="time">Time:</string>
    <string name="easter_egg_playworld">This ain\'t play button XD</string>
    <string name="easter_egg_android_welcome">Hello Android</string>
    <string name="easter_egg_android_bye">Bye bye Android</string>
    <string name="cleared">cleared</string>
    <string name="not_cleared">not cleared</string>
    <string name="detail_developer1">Aaron Peruga</string>
    <string name="detail_developer2">Pau Bernabe</string>
    <string name="detail_developer3">Arnau Rovira</string>
    <string name="detail_developer4">Manuel Martinez</string>
    <string name="detail_github_developer1">https://github.com/aaronPeruga</string>
    <string name="detail_github_developer2">https://github.com/paubernabe</string>
    <string name="detail_github_developer3">https://github.com/arnauRoviraPerez</string>
    <string name="detail_github_developer4">https://github.com/manuMatnez</string>
    <string name="select_skin">select your skin</string>
</resources>
