<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuActivity" android:background="@color/colorBlack"
        android:padding="40dp" android:orientation="vertical">
    <ImageButton
            android:scaleType="fitXY"
            android:layout_gravity="top"
            android:layout_width="61dp"
            android:adjustViewBounds="true"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/back_arrow"
            android:contentDescription="@string/back"
            android:id="@+id/info_back_button"/>
    <TextView
            android:text="@string/info_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/info_version"
            android:fontFamily="@font/crimes_times_six"
            style="@style/cts_limitless_white" android:layout_marginTop="20dp"/>
    <TextView
            android:text="@string/versionDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/version_details" style="@style/cts_limitless_white"
            android:layout_marginLeft="40dp" android:textSize="40sp"/>
    />
    <TextView
            android:text="@string/developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/info_developers"
            android:fontFamily="@font/crimes_times_six" android:textColor="@color/colorWhite"
            style="@style/cts_limitless_white" android:layout_marginTop="20dp"/>
    <TextView
            android:text="@string/detail_developers1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/developers_details1"
            android:layout_marginLeft="40dp" android:textColor="@color/colorWhite" android:textSize="30sp"/>
    <TextView
            android:text="@string/detail_developers2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/developers_details2"
            android:layout_marginLeft="40dp" android:textColor="@color/colorWhite" android:textSize="30sp"/>
    <TextView
            android:text="@string/detail_developers3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/developers_details3"
            android:layout_marginLeft="40dp" android:textColor="@color/colorWhite" android:textSize="30sp"/>
    <TextView
            android:text="@string/detail_developers4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/developers_details4"
            android:layout_marginLeft="40dp" android:textColor="@color/colorWhite" android:textSize="30sp"/>
    />
    <TextView
            android:text="@string/music_rights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/info_music_rights"
            android:fontFamily="@font/crimes_times_six" android:textColor="@color/colorWhite"
            style="@style/cts_limitless_white" android:layout_marginTop="20dp"/>
    <TextView
            android:text="@string/detail_music_rights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/music_rights_details"
            android:layout_marginLeft="40dp" android:textColor="@color/colorWhite" android:textSize="30sp"/>
</LinearLayout>