<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity" android:orientation="vertical" android:padding="20dp">

    <TextView
            android:text="@string/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/welcome_tv" android:gravity="center_horizontal"
            android:textSize="35sp" android:textStyle="bold" android:layout_marginBottom="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/username_tv" tools:text="ExampleUser"
            android:textStyle="bold" android:textSize="30sp" android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/logo_img" android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name"/>
    <TextView
            android:text="@string/ask_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/ask_name_tv" android:textSize="25sp"
            android:textStyle="bold" android:layout_marginBottom="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/input_name_et"
            tools:ignore="Autofill" android:hint="@string/example_user" android:layout_marginBottom="20dp"/>
    <ImageButton
            android:layout_width="120dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:layout_height="120dp" app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal"
            android:id="@+id/setname_btn"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/go"/>
</LinearLayout>