<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLiteBlue"
        tools:context=".WorldSelectorActivity"
        android:orientation="vertical"
        android:padding="20dp">

    <ImageButton
            android:scaleType="fitXY"
            android:layout_gravity="top"
            android:layout_width="61dp"
            android:adjustViewBounds="true"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/back_arrow_options"
            android:contentDescription="@string/back"
            android:id="@+id/world_back_button"/>

    <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

    <ImageButton
            android:scaleType="fitXY"
            android:layout_width="67dp"
            android:layout_height="46dp"
            android:contentDescription="@string/change_up"
            app:srcCompat="@drawable/change_world_arrow_up"
            android:id="@+id/change_up_arrow"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"/>

    <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal">

        <ImageButton
                android:scaleType="fitXY"
                android:layout_width="46dp"
                android:layout_height="67dp"
                android:contentDescription="@string/change_left"
                app:srcCompat="@drawable/change_world_arrow_left"
                android:id="@+id/change_left_arrow"
                android:background="@android:color/transparent"
                android:adjustViewBounds="true"
                android:layout_gravity="center_vertical"/>

        <ImageButton
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/world_one"
                app:srcCompat="@drawable/portada_mundo1"
                android:background="@color/colorDarkWhite"
                android:id="@+id/world_one" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>

        <ImageButton
                android:scaleType="fitXY"
                android:layout_width="46dp"
                android:layout_height="67dp"
                android:contentDescription="@string/change_right"
                app:srcCompat="@drawable/change_world_arrow_right"
                android:id="@+id/change_right_arrow"
                android:background="@android:color/transparent"
                android:adjustViewBounds="true"
                android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

    <ImageButton
            android:scaleType="fitXY"
            android:layout_width="67dp"
            android:layout_height="46dp"
            android:contentDescription="@string/change_down"
            app:srcCompat="@drawable/change_world_arrow_down"
            android:id="@+id/change_down_arrow"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal" android:visibility="visible" android:clickable="false"/>

    <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

    <TextView
            android:text="@string/world_one_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/world_one_title"
            android:fontFamily="@font/crimes_times_six"
            style="@style/cts_limitless_black_worlds" android:layout_marginTop="20dp" android:textAlignment="center"
            android:textSize="40sp"/>

    <Space
            android:layout_width="wrap_content"
            android:layout_height="1dp"/>

    <TextView
            android:text="@string/first_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/level_title"
            android:fontFamily="@font/crimes_times_six"
            style="@style/cts_limitless_black_worlds" android:layout_marginTop="20dp" android:textAlignment="center"
            android:textSize="40sp"/>

    <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

    <TextView
            android:text="@string/Personal_best"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crimes_times_six"
            style="@style/cts_limitless_black_worlds" android:layout_marginTop="20dp"
            android:textSize="40sp"/>











</LinearLayout>