<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.GameModeActivity" android:orientation="vertical" android:background="@color/colorBlack"
        android:padding="40dp">


    <ImageButton
            android:scaleType="fitXY"
            android:layout_gravity="top"
            android:layout_width="60dp"
            android:adjustViewBounds="true"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/back_arrow"
            android:contentDescription="@string/back"
            android:id="@+id/blackArrowButton" android:layout_marginBottom="30dp"/>
    <ImageButton
            android:layout_width="200dp"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:layout_height="60dp" app:srcCompat="@drawable/my_map"
            android:id="@+id/myMapButton"
            android:contentDescription="@string/mymap_button"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal" android:adjustViewBounds="true"/>
    <TextView
            style="@style/cts_limitless"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:id="@+id/MyMapText"
            android:singleLine="false" tools:text="@string/text_mymap" android:text="@string/text_mymap"
            android:layout_marginBottom="20dp" android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" android:textColor="@color/colorStylePurple"/>
    <ImageButton
            android:layout_width="200dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/inf_button"
            android:layout_height="60dp" app:srcCompat="@drawable/infinite_mode"
            android:id="@+id/infiniteModeButton"
            android:layout_marginBottom="20dp" android:layout_gravity="center_horizontal"/>
    <TextView
            android:text="@string/text_infinite"
            tools:text="@string/text_infinite"
            android:layout_width="wrap_content"
            android:singleLine="false"
            style="@style/cts_limitless"
            android:textSize="20dp"
            android:layout_height="wrap_content" android:id="@+id/infiniteText"
            android:layout_gravity="center_horizontal" android:layout_marginBottom="20dp"
            android:textColor="@color/colorStylePurple"/>
    <ImageButton
            android:layout_width="200dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/inf_button"
            android:layout_height="60dp" app:srcCompat="@drawable/versus_mode"
            android:id="@+id/infiniteModeVersusButton"
            android:layout_marginBottom="20dp" android:layout_gravity="center_horizontal"/>

    <TextView
            android:text="@string/text_versus"
            tools:text="@string/text_versus"
            android:layout_width="wrap_content"
            android:singleLine="false"
            style="@style/cts_limitless"
            android:textSize="20dp"
            android:layout_height="wrap_content" android:id="@+id/versus_text"
            android:layout_gravity="center_horizontal" android:layout_marginBottom="20dp"
            android:textColor="@color/colorStylePurple"/>

</LinearLayout>