<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBlack"
        android:padding="40dp"
        tools:context=".view.GameDeadActivity" android:id="@+id/root">

    <ImageView
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:contentDescription="@string/you_died"
            android:layout_height="52dp"
            app:srcCompat="@drawable/you_died"
            android:id="@+id/youDiedImg" android:layout_marginBottom="30dp"/>

    <ImageView
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="180dp"
            android:contentDescription="@string/youDiedheart"
            android:background="@android:color/transparent"
            android:layout_height="170dp"
            app:srcCompat="@drawable/corazon_muerte"
            android:id="@+id/dead_heart" android:layout_marginBottom="20dp"/>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
    >


        <TextView
                android:text="@string/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/road_limitless" android:textSize="24dp"
                android:textAlignment="textStart"
                android:layout_marginEnd="30dp" android:id="@+id/score_text" android:textColor="@color/colorYellow"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/road_limitless" android:textSize="24dp"
                android:textAlignment="textEnd" android:id="@+id/score_puntuation" tools:text="234"
                android:textColor="@color/colorYellow"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
    >


        <TextView
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/road_limitless" android:textSize="24dp"
                android:textAlignment="textStart"
                android:layout_marginEnd="30dp" android:id="@+id/time" android:textColor="@color/colorYellow"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/road_limitless" android:textSize="24dp"
                android:textAlignment="textEnd" android:id="@+id/time_text" tools:text="00:00"
                android:textColor="@color/colorYellow"/>

    </LinearLayout>


    <ImageButton
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="180dp"
            android:contentDescription="@string/retry_level"
            android:background="@android:color/transparent"
            android:layout_height="50dp" app:srcCompat="@drawable/retry_button" android:id="@+id/retryButton_normal"
            android:layout_marginBottom="30dp" android:layout_marginTop="30dp"/>

    <ImageButton
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/worlds_button"
            android:layout_gravity="center_horizontal"
            android:layout_width="180dp"
            android:background="@android:color/transparent"
            android:layout_height="50dp" app:srcCompat="@drawable/worlds" android:id="@+id/dead_worldsButton"
            android:layout_marginBottom="30dp"/>
    <ImageButton
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/menu_button"
            android:layout_gravity="center_horizontal"
            android:layout_width="180dp"
            android:background="@android:color/transparent"
            android:layout_height="50dp" app:srcCompat="@drawable/menu" android:id="@+id/dead_menuButton"/>


</LinearLayout>