<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        tools:context=".view.WorldSelectorActivity"
        android:orientation="vertical"
        android:padding="40dp" android:id="@+id/root">

    <ImageButton
            android:scaleType="fitXY"
            android:layout_gravity="top"
            android:layout_width="60dp"
            android:adjustViewBounds="true"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/back_arrow"
            android:contentDescription="@string/back"
            android:id="@+id/skins_back_button" android:layout_marginBottom="40dp"/>

    <TextView
            android:text="@string/select_skin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/skins_selection"
            style="@style/cts_limitless" android:textAlignment="center"
            android:textSize="40sp" android:layout_gravity="center_horizontal" android:layout_marginBottom="30dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
    >

        <ImageButton
                android:scaleType="fitXY"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:contentDescription="@string/change_left"
                app:srcCompat="@drawable/change_world_arrow_left"
                android:background="@android:color/transparent"
                android:id="@+id/change_left_arrow_skins"
                android:adjustViewBounds="true"
                android:layout_gravity="center_vertical"/>

        <ImageButton
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:contentDescription="@string/world_one"
                app:srcCompat="@drawable/skin_select_default"
                android:background="@android:color/transparent"
                android:id="@+id/skin_preview" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>

        <ImageButton
                android:scaleType="fitXY"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:contentDescription="@string/change_right"
                app:srcCompat="@drawable/change_world_arrow_right"
                android:id="@+id/change_right_arrow_skins"
                android:background="@android:color/transparent"
                android:adjustViewBounds="true"
                android:layout_gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>