<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:id="@+id/pauseDialog"
                >

    <ImageButton
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_width="220dp"
            android:contentDescription="@string/resume_button"
            android:layout_height="60dp" android:src="@drawable/resume"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:id="@+id/resumeButtonDiag"/>
    <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
    <ImageButton
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_width="220dp"
            android:contentDescription="@string/worlds_button"
            android:layout_height="60dp" android:src="@drawable/worlds"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:id="@+id/worldsButtonPauseDiag"/>
    <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
    <ImageButton
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_width="220dp"
            android:contentDescription="@string/menu_button"
            android:layout_height="60dp" android:src="@drawable/menu"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:id="@+id/menuButtonPauseDiag"/>
    <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>
    <ImageView
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="168dp"
            android:contentDescription="@string/pause_heart"
            android:layout_height="152dp" android:src="@drawable/pause_heart"
            android:id="@+id/pauseHeartDiag"/>

</LinearLayout>