<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SecondPlayerVsActivity" android:orientation="vertical"
        android:padding="50dp"
        android:background="@color/colorBlack" android:id="@+id/root">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/player1_dead" style="@style/road_limitless" android:textSize="32dp"
            android:maxLines="1" android:gravity="center_horizontal" android:layout_marginBottom="30dp"
            android:text="@string/player1_dead" android:textColor="@color/colorWhite"/>

    <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp" app:srcCompat="@drawable/corazon_muerte" android:id="@+id/losePlayer1"
            android:layout_marginBottom="30dp" android:contentDescription="@string/youDiedheart"
            android:layout_gravity="center_horizontal"/>
    <ImageButton
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/next_player"
            android:layout_gravity="center_horizontal"
            android:layout_width="180dp"
            android:background="@android:color/transparent"
            android:layout_height="50dp" app:srcCompat="@drawable/next_player"
            android:id="@+id/player2_start_button"/>

</LinearLayout>